// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps snapshot > Steps demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      style="width: 120px;"
    >
      <div
        class="bui-steps bui-steps-vertical"
      >
        <div
          class="bui-step bui-step-vertical bui-step-label-horizontal"
        >
          <div
            class="bui-step-line bui-step-line-active"
          />
          <div
            class="bui-step-icon"
          >
            <div
              class="bui-step-icon-active"
            />
          </div>
          <div
            class="bui-step-content"
          >
            <div
              class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
            >
              <div
                class="bui-step-title bui-step-title-active bui-step-title-horizontal"
              >
                选择活动
              </div>
            </div>
          </div>
        </div>
        <div
          class="bui-step bui-step-vertical bui-step-label-horizontal"
        >
          <div
            class="bui-step-line bui-step-line-wait"
          />
          <div
            class="bui-step-icon"
          >
            <svg
              aria-hidden="true"
              class="bui-svg-icon"
              color="var(--bui-color-fg-disabled)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
              />
            </svg>
          </div>
          <div
            class="bui-step-content"
          >
            <div
              class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
            >
              <div
                class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
              >
                创建内容
              </div>
            </div>
          </div>
        </div>
        <div
          class="bui-step bui-step-vertical bui-step-label-horizontal"
        >
          <div
            class="bui-step-line bui-step-line-wait"
          />
          <div
            class="bui-step-icon"
          >
            <svg
              aria-hidden="true"
              class="bui-svg-icon"
              color="var(--bui-color-fg-disabled)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
              />
            </svg>
          </div>
          <div
            class="bui-step-content"
          >
            <div
              class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
            >
              <div
                class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
              >
                发布上线
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-steps bui-steps-horizontal"
    >
      <div
        class="bui-step bui-step-horizontal bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <div
            class="bui-step-icon-active"
          />
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              选择活动
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-horizontal bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              创建内容
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-horizontal bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              发布上线
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-steps bui-steps-vertical"
    >
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <div
            class="bui-step-icon-active"
          />
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              选择活动
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              选定目标受众
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              创建内容
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              上传创意素材
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              发布上线
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              审批活动
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-steps bui-steps-vertical"
    >
      <div
        class="bui-step bui-step-vertical bui-step-label-vertical"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <div
            class="bui-step-icon-active"
          />
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-vertical"
            >
              选择活动
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-vertical"
            >
              选定目标受众
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-vertical"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-vertical"
            >
              创建内容
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-vertical"
            >
              上传创意素材
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-vertical"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-vertical"
            >
              发布上线
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-vertical"
            >
              审批活动
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-steps bui-steps-vertical"
    >
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <div
            class="bui-step-icon-active"
          />
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              选择活动
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              选定目标受众
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              创建内容
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              上传创意素材
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              审核确认
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              审批活动
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              发布上线
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              正式上线
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-steps bui-steps-vertical"
    >
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-error"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-error"
          >
            <div
              class="bui-step-title bui-step-title-error bui-step-title-horizontal"
            >
              选择活动
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              选定目标受众
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-finish"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm17.1 27.9c-1.2-1.2-3.1-1.2-4.2 0L43 53.8l-7.9-7.9c-1.2-1.2-3.1-1.2-4.2 0s-1.2 3.1 0 4.2l10 10c1.2 1.2 3.1 1.2 4.2 0l20-20c1.2-1.2 1.2-3.1 0-4.2z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-finish"
          >
            <div
              class="bui-step-title bui-step-title-finish bui-step-title-horizontal"
            >
              创建内容
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              上传创意素材
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <div
            class="bui-step-icon-active"
          />
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              审核确认
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              审批活动
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              发布上线
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              正式上线
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-steps bui-steps-vertical"
    >
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M62.6 11C78.1 11 88 23.4 88 40.1c0 13-11.7 27.2-34.8 43.3-3.1 2.2-7.2 2.2-10.3 0C19.7 67.3 8 53.1 8 40.1 8 23.4 17.9 11 33.4 11c5.6 0 9.4 2 14.6 6.4C53.2 13 57 11 62.6 11z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              选择活动
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              选定目标受众
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 91C42.6 91 9 65.1 9 43.7S26.5 5 48 5s39 17.3 39 38.7S53.4 91 48 91zm0-35c6.6 0 12-5.4 12-12s-5.4-12-12-12-12 5.4-12 12 5.4 12 12 12z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              创建内容
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              上传创意素材
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-error"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 6c-18.8 0-34 15.2-34 34s15.2 34 34 34 34-15.2 34-34-15.2-34-34-34zm4.1 34 8.1 8.1c1.1 1.1 1.1 2.9 0 4.1s-2.9 1.1-4.1 0L48 52.1l-8.1 8.1c-1.1 1.1-2.9 1.1-4.1 0s-1.1-2.9 0-4.1l8.1-8.1-8.1-8.1c-1.1-1.1-1.1-2.9 0-4.1s2.9-1.1 4.1 0l8.1 8.1 8.1-8.1c1.1-1.1 2.9-1.1 4.1 0s1.1 2.9 0 4.1L52.1 48z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-error"
          >
            <div
              class="bui-step-title bui-step-title-error bui-step-title-horizontal"
            >
              审核确认
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              审批活动
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-vertical bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88c22.1 0 40-17.9 40-40S70.1 8 48 8 8 25.9 8 48s17.9 40 40 40zM30.9 60.9 45 46.8V30c0-1.7 1.3-3 3-3s3 1.3 3 3v18c0 .8-.3 1.6-.9 2.1l-15 15c-1.2 1.2-3.1 1.2-4.2 0-1.2-1.2-1.2-3 0-4.2z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              发布上线
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              正式上线
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-steps bui-steps-horizontal"
    >
      <div
        class="bui-step bui-step-horizontal bui-step-label-horizontal bui-step-disabled"
      >
        <div
          class="bui-step-line bui-step-line-error"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-error"
          >
            <div
              class="bui-step-title bui-step-title-error bui-step-title-horizontal"
            >
              选择活动
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-horizontal bui-step-label-horizontal"
      >
        <div
          class="bui-step-line bui-step-line-active"
        />
        <div
          class="bui-step-icon"
        >
          <div
            class="bui-step-icon-active"
          />
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              class="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              创建内容
            </div>
          </div>
        </div>
      </div>
      <div
        class="bui-step bui-step-horizontal bui-step-label-horizontal bui-step-disabled"
      >
        <div
          class="bui-step-line bui-step-line-wait"
        />
        <div
          class="bui-step-icon"
        >
          <svg
            aria-hidden="true"
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
            />
          </svg>
        </div>
        <div
          class="bui-step-content"
        >
          <div
            class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              发布上线
            </div>
            <div
              class="bui-step-subtitle bui-step-subtitle-horizontal"
            >
              审批活动
            </div>
          </div>
          <div
            class="bui-step-desc"
          >
            配置当前步骤的详细项。
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 8`] = `
<div>
  <div
    class="bui-steps bui-steps-vertical"
  >
    <div
      class="bui-step bui-step-vertical bui-step-label-vertical"
    >
      <div
        class="bui-step-line bui-step-line-active"
      />
      <div
        class="bui-step-icon"
      >
        <div
          class="bui-step-icon-active"
        />
      </div>
      <div
        class="bui-step-content"
      >
        <div
          class="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-active"
        >
          <div
            class="bui-step-title bui-step-title-active bui-step-title-vertical"
          >
            退款申请已提交
          </div>
          <div
            class="bui-step-subtitle bui-step-subtitle-vertical"
          >
            2024-04-29 19:00
          </div>
        </div>
        <div
          class="bui-step-desc"
        >
          <div
            class="bui-stack"
            style="--align-items: flex-start; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
          >
            <div
              style="width: 220px; height: 80px; border-radius: 10px; display: flex; flex-direction: column; justify-content: space-around; padding: 5px 10px; margin: 5px 0px 20px;"
            >
              <div>
                <span
                  style="color: rgb(95, 102, 114);"
                >
                  退货商品
                </span>
                <span
                  style="color: rgb(46, 51, 62); padding-left: 20px;"
                >
                  无线鼠标 × 3
                </span>
              </div>
              <div>
                <span
                  style="color: rgb(95, 102, 114);"
                >
                  退款金额
                </span>
                <span
                  style="color: rgb(46, 51, 62); padding-left: 20px;"
                >
                  ¥199.00
                </span>
              </div>
              <div>
                <span
                  style="color: rgb(95, 102, 114);"
                >
                  手续费
                </span>
                <span
                  style="color: rgb(46, 51, 62); padding-left: 34px;"
                >
                  ¥10.00（平台处理费）
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-step bui-step-vertical bui-step-label-vertical"
    >
      <div
        class="bui-step-line bui-step-line-wait"
      />
      <div
        class="bui-step-icon"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon"
          color="var(--bui-color-fg-disabled)"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
          />
        </svg>
      </div>
      <div
        class="bui-step-content"
      >
        <div
          class="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
        >
          <div
            class="bui-step-title bui-step-title-wait bui-step-title-vertical"
          >
            退款处理中
          </div>
          <div
            class="bui-step-subtitle bui-step-subtitle-vertical"
          >
            2024-04-29 19:08
          </div>
        </div>
        <div
          class="bui-step-desc"
        >
          正在处理退款申请，预计 1-3 个工作日原路返回付款账户。
        </div>
      </div>
    </div>
    <div
      class="bui-step bui-step-vertical bui-step-label-vertical"
    >
      <div
        class="bui-step-line bui-step-line-wait"
      />
      <div
        class="bui-step-icon"
      >
        <svg
          aria-hidden="true"
          class="bui-svg-icon"
          color="var(--bui-color-fg-disabled)"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
          />
        </svg>
      </div>
      <div
        class="bui-step-content"
      >
        <div
          class="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
        >
          <div
            class="bui-step-title bui-step-title-wait bui-step-title-vertical"
          >
            退款完成
          </div>
          <div
            class="bui-step-subtitle bui-step-subtitle-vertical"
          >
            2024-04-29 19:15
          </div>
        </div>
        <div
          class="bui-step-desc"
        >
          退款已到账，本次退款流程已结束。
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot > Steps demo snapshot 0 9`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      style="width: 176px;"
    >
      <div
        class="bui-steps bui-steps-vertical"
        style="--title-font-size: 30px; --step-icon-margin: 12px 4px 0 0; --step-line-padding: 36px 0 0 0;"
      >
        <div
          class="bui-step bui-step-vertical bui-step-label-horizontal"
        >
          <div
            class="bui-step-line bui-step-line-active"
          />
          <div
            class="bui-step-icon"
          >
            <div
              class="bui-step-icon-active"
            />
          </div>
          <div
            class="bui-step-content"
          >
            <div
              class="bui-step-title-wrapper bui-step-title-wrapper-line-active"
            >
              <div
                class="bui-step-title bui-step-title-active bui-step-title-horizontal"
              >
                选择活动
              </div>
            </div>
          </div>
        </div>
        <div
          class="bui-step bui-step-vertical bui-step-label-horizontal"
        >
          <div
            class="bui-step-line bui-step-line-wait"
          />
          <div
            class="bui-step-icon"
          >
            <svg
              aria-hidden="true"
              class="bui-svg-icon"
              color="var(--bui-color-fg-disabled)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
              />
            </svg>
          </div>
          <div
            class="bui-step-content"
          >
            <div
              class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
            >
              <div
                class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
              >
                创建内容
              </div>
            </div>
          </div>
        </div>
        <div
          class="bui-step bui-step-vertical bui-step-label-horizontal"
        >
          <div
            class="bui-step-line bui-step-line-wait"
          />
          <div
            class="bui-step-icon"
          >
            <svg
              aria-hidden="true"
              class="bui-svg-icon"
              color="var(--bui-color-fg-disabled)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z"
              />
            </svg>
          </div>
          <div
            class="bui-step-content"
          >
            <div
              class="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
            >
              <div
                class="bui-step-title bui-step-title-wait bui-step-title-horizontal"
              >
                发布上线
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
